try to fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@ main {
         top: 5%;
         left: 5%;
         right: 5%;
-        /*overflow: scroll;*/
+        overflow-y: hidden;
         color: white;
         display: none;
     }
